add flow for slip and summary

--- a/clipforge_flutter_ui/supabase/config.toml
+++ b/clipforge_flutter_ui/supabase/config.toml
@@ -149,7 +149,7 @@ enabled = true
 # in emails.
 site_url = "http://127.0.0.1:3000"
 # A list of *exact* URLs that auth providers are permitted to redirect to post authentication.
-additional_redirect_urls = ["https://127.0.0.1:3000"]
+additional_redirect_urls = ["http://localhost:3000", "io.clipforge://login-callback"]
 # How long tokens are valid for, in seconds. Defaults to 3600 (1 hour), maximum 604,800 (1 week).
 jwt_expiry = 3600
 # JWT issuer URL. If not set, defaults to the local API URL (http://127.0.0.1:<port>/auth/v1).
@@ -188,6 +188,13 @@ sign_in_sign_ups = 30
 token_verifications = 30
 # Number of Web3 logins that can be made in a 5 minute interval per IP address.
 web3 = 30
+
+[auth.external.google]
+enabled = true
+client_id = ""
+secret = ""
+redirect_uri = "http://127.0.0.1:54321/auth/v1/callback"
+
 
 # Configure one of the supported captcha providers: `hcaptcha`, `turnstile`.
 # [auth.captcha]
