--- a/clipforge_flutter_ui/pubspec.yaml
+++ b/clipforge_flutter_ui/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   intl: ^0.19.0
   supabase_flutter: ^2.8.0
   flutter_secure_storage: ^9.2.2
+  google_sign_in: ^6.2.1
+  file_picker: ^8.0.0+1
 
 flutter:
   uses-material-design: true
