--- a/clipforge_flutter_ui/pubspec.yaml
+++ b/clipforge_flutter_ui/pubspec.yaml
@@ -16,6 +16,23 @@ dependencies:
   flutter_secure_storage: ^9.2.2
   google_sign_in: ^6.2.1
   file_picker: ^8.0.0+1
+  image_picker: ^1.1.2
+  http: ^1.2.0
+  socket_io_client: ^2.0.3+1
+  shared_preferences: ^2.2.2
+  device_info_plus: ^10.1.0
+
+  # Video processing dependencies
+  ffmpeg_kit_flutter_new: ^4.1.0
+  sqflite: ^2.3.2
+  path_provider: ^2.1.2
+  uuid: ^4.3.3
+  permission_handler: ^11.3.0
+  video_player: ^2.9.2
+  gal: ^2.3.0
 
 flutter:
   uses-material-design: true
+  # Uncomment when you add watermark.png to assets/images/
+  assets:
+    - assets/images/watermark.png
